# Snake

./: CMakeLists.txt  Enoncé.md  LICENSE
include/: snake.hpp
src/: main.cpp  snake.cpp
